# Lambda.QRGen

./: .gitignore  QRGen.sln  README.md  package-lock.json  package.json
QRGen/: Function.cs  Lambda.QRGen.csproj  Readme.md  aws-lambda-tools-defaults.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
